# pos-mobile

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  DESIGN.md  README.md  docker-compose.yml
.claude/: README.md  settings.json  settings.local.json
.claude/agents/: architecture-auditor.md  flutter-lead-reviewer.md  flutter-performance-reviewer.md  flutter-reviewer.md  flutter-security-reviewer.md
.claude/commands/: check-quality.md  implement-service.md  new-adr.md  new-migration.md  new-module.md
.claude/hooks/: auto-format.sh  block-dangerous-commands.sh
.claude/rules/: backend-conventions.md  migrations-safety.md  mobile-conventions.md
.claude/skills/: _ideas.md
.claude/skills/architect/: SKILL.md
.claude/skills/backend-expert/: SKILL.md
.claude/skills/code-cleaner /:  SKILL.md
.claude/skills/flutter-ui-ux-optimizer/: SKILL.md
.claude/skills/flutter-ui-ux-optimizer/references/: design-system.md  flutter-patterns.md  scoring-rubric.md
.claude/skills/frontend-expert/: SKILL.md
.claude/skills/frontend-expert/references/: code-templates.md  design-system.md  file-structure.md
.claude/skills/po-advisor/: SKILL.md
.github/workflows/: backend-ci.yml  deploy-prod.yml  mobile-ci.yml  pre-commit.yml
backend/: .env.example  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: .gitkeep  0001_initial_schema.py  ceee847173d3_auth_phone_first_email_optional.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  db.py  dependencies.py  email.py  exceptions.py  logging.py  middleware.py  pagination.py  security.py  seed.py
backend/app/modules/auth/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/catalog/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/sales/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/stores/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/sync/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/templates/emails/: password_reset.html  password_reset.txt  verification_email.html  verification_email.txt
backend/scripts/: seed_test_data.py
backend/tests/: conftest.py  test_catalog.py  test_health.py  test_rls_isolation.py  test_sales.py  test_stores.py  test_sync.py
backend/tests/modules/auth/: test_auth_service.py  test_email_service.py
docs/: account-deletion.html  api.md  architecture.md  build-apk-prod.md  data-model-detailed.md  data-model.md  error-mapping.md  flavors.md  github-setup.md  index.html  privacy-policy.md  runbook.md
docs/adr/: 0001-monolithe-modulaire.md  0002-multi-tenancy-rls.md  0003-sync-hybride.md  0004-auth-email-pin.md  0005-stack-flutter-fastapi.md  0006-auth-phone-first.md  0006-hebergement-hetzner.md  README.md  _template.md
mobile/: CLAUDE.md  Makefile  README.md  analysis_options.yaml  flutter_launcher_icons.yaml  flutter_native_splash.yaml  pubspec.yaml
mobile/.claude/: settings.local.json
mobile/android/: gradle.properties
mobile/android/app/: build.gradle.kts
mobile/integration_test/: pin_pbkdf2_benchmark_test.dart
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart  main_prod.dart
mobile/lib/core/: app.dart  config.dart  repository_providers.dart  theme.dart
mobile/lib/core/navigation/: nav_provider.dart
mobile/lib/core/network/: api_exception.dart  auth_interceptor.dart  dio_client.dart  error_mapper.dart  (+3 more)
mobile/lib/database/: app_database.dart
mobile/lib/features/: README.md
mobile/lib/shared/: .gitkeep
mobile/test/: app_test.dart  create_sale_usecase_test.dart  mappers_characterization_test.dart  money_conversion_test.dart  network_api_exception_test.dart  network_refresh_interceptor_test.dart  pin_storage_test.dart  sales_money_test.dart  secure_token_storage_test.dart  sync_orchestrator_test.dart
scripts/: .gitkeep
store-assets/: architecture-post.html  linkedin-post.md
test/: product_mapper_test.dart  sale_mapper_test.dart  store_mapper_test.dart
(+117 files in other folders)
